jerry-core/parser/js/new-parser/tests/js/lexer/regexp-tab.js
/* This test contains regexp literal parser tests. */

/a/igm + /	/ error
